# NUTN-CSIE-Code

./: .gitignore  README.md
Algorithm/hw1_prime_number/: CMakeLists.txt  README.md  setup.sh
Algorithm/hw1_prime_number/basic_method/: CMakeLists.txt
Algorithm/hw1_prime_number/basic_method/src/: main.cpp
Algorithm/hw1_prime_number/fermat/src/: main.cpp
Algorithm/hw1_prime_number/lib/big_int/: .gitignore  CMakeLists.txt  README.md
Algorithm/hw1_prime_number/miller_rabin/src/: main.cpp
Algorithm/hw1_prime_number/script/data/: find_mersenne_prime_number.sh  generate_cost_time_csv.sh  generate_cost_time_figur.sh  generate_fermat_vs_miller_data.sh  generate_fermat_vs_miller_figur.sh
Algorithm/hw1_prime_number/script/report/: cost_time.py  try_times_effect.py
Algorithm/hw1_prime_number/sieve_of_eratosthenes/src/: main.cpp
Algorithm/hw1_prime_number/src/: all_algorithm_cost_time.cpp  fermat_vs_miller.cpp  find_mersenne_prime_number.cpp  main.cpp
Algorithm/hw1_prime_number/src/core/: config.cpp  config.hpp  prime_runner.hpp
Algorithm/hw2_electric_vehicle_motor/: CMakeLists.txt  README.md  people.csv  stands.csv
Algorithm/hw2_electric_vehicle_motor/src/: core  core_algorithm.cpp  core_algorithm.hpp  core_process_io.cpp  core_process_io.hpp  core_structure.cpp  core_structure.hpp  main.cpp
Algorithm/hw3_trees/: CMakeLists.txt  README.md
Algorithm/hw3_trees/dataset/fail/: FailTest_1.txt  FailTest_2.txt  FailTest_3.txt  FailTest_4.txt  FailTest_5.txt  FailTest_in.txt
Algorithm/hw3_trees/dataset/full_acc/: InputSize131072.txt  InputSize2048.txt  InputSize32768.txt  InputSize32768_1.txt  InputSize512.txt  InputSize8192.txt
Algorithm/hw3_trees/result/: acc_fail.csv  acc_full.csv
Algorithm/hw3_trees/script/: acc_fail.bash  acc_full.bash
Algorithm/hw3_trees/src/: main.cpp
ComputerGraphics/HW2-S11159005/source_code/: CMakeLists.txt
ComputerGraphics/final/: CMakeLists.txt  README.md  vcpkg.json
ComputerGraphics/final/libs/learnopengl/: mesh.h  model.h
ComputerGraphics/final/res/shader/: axes_fragment_shader.glsl  axes_vertex_shader.glsl  floor_fragment_shader.glsl  floor_vertex_shader.glsl
ComputerGraphics/final/src/: main.cpp
ComputerGraphics/final/src/object/: bowling.h  floor.h  vector.h
ComputerGraphics/hw3/: CMakeLists.txt
ComputerGraphics/hw3/doc/: hw3-S11159005.tex
ComputerGraphics/hw3/src/: main.cpp  shader.h
ComputerGraphics/hw4/: CMakeLists.txt
ComputerGraphics/hw4/doc/: hw4-S11159005.tex
ComputerGraphics/hw4/shader/: multiple_light.glsl
ComputerGraphics/hw4/src/: main.cpp
ComputerProgramming/second/Week_12/hw/: CMakeLists.txt  main.cpp  main_2.cpp  out
DataMining/final-project/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
DataMining/final-project/docs/: competition.md  dataset.md
DataMining/final-project/scripts/: train.py
DataMining/final-project/scripts/baseline/: base_line.py
DataMining/final-project/scripts/ensemble/: ensemble_optuna_tabular.py  ensemble_tabular_lightgbm.py
DataMining/final-project/scripts/postprocess/: postprocess_optuna_threshold.py
DataMining/final-project/scripts/predict/: predict_autogluon.py  predict_catboost.py  predict_lightgbm.py  predict_tabular_net.py  predict_tabular_net_multi_seed.py  predict_tabular_net_optuna.py
DataMining/final-project/scripts/setup/: download_dataset.py
DataMining/final-project/scripts/train/: base_line.py  ensemble_tabular_lightgbm.py  tabular_net.py  train_autogluon.py  train_catboost.py  train_lightgbm.py  train_tabular_net.py  train_tabular_net_multi_seed.py  train_tabular_net_optuna.py
DataStructure/Calculator/: CMakeLists.txt  README.md
DataStructure/Calculator/src/: main.c
DataStructure/Maze/: CMakeLists.txt  README.md
DataStructure/Maze/lib/Maze/: Maze.h  (+3 more)
Digital Image Processing/Final_Project/: .gitignore  FinalProjectApp.mlapp  README.md  main_test.py  pyproject.toml  valid_script.py
Digital Image Processing/Final_Project/+env/: config.m
Digital Image Processing/Final_Project/+functions/: process_image.m
Digital Image Processing/Final_Project/doc/: 113學年度-影像處理期末專案-說明文件  .docx
DigitalSignalProcessing/DSP-ECG/: .gitignore  .rule  AGENTS.md  README.md  pyproject.toml
DigitalSignalProcessing/DSP-ECG/cfgs/: project.yaml
DigitalSignalProcessing/DSP-ECG/docs/: EEG深度學習失智症分類.md  EEG深度學習失智症分類_白話文.md  index.md  task.md  復現完成條件.md  模型.md  訓練.md  論文復現執行清單.md  論文復現稽核.md  論文表格復現對照.md  資料處理.md  資料集.md
ParallelComputing/cuda_cmake/: .clangd  CMakeLists.txt  README.md
ParallelComputing/cuda_cmake/.zed/: debug.json  tasks.json
ParallelComputing/cuda_cmake/src/: add_arbitrary_size.cu  add_block_size_benchmark.cu  add_by_block.cu  add_by_thread.cu  device_query.cu  hello_world_magic.cu  parallel_kernels.cu  stencil_common.hpp  stencil_global.cu  stencil_serial.cu  stencil_shared.cu  vector_add.cu
ParallelComputing/openmp_cmake/: .clangd  CMakeLists.txt  README.md
ParallelComputing/openmp_cmake/.zed/: debug.json  settings.json  tasks.json
ParallelComputing/openmp_cmake/src/: collapse_nested_loops_compare.c  fibonacci_task_compare.c  linear_search_compare.c  matrix_multiply_compare.c  parallel_for_cpu_demo.c  prime_schedule_benchmark.c  sum_reduction_atomic_compare.c  task_linked_list_compare.c
SoftComputing/ANN_PSO/: .gitignore  CLAUDE.md  Cargo.toml  README.md
SoftComputing/ANN_PSO/docs/: assignment.md  homework_description.md
SoftComputing/ANN_PSO/examples/: predict.rs  train_gd.rs  train_pso.rs
SoftComputing/ANN_PSO/scripts/: analyze_mnist.py
SoftComputing/ANN_PSO/src/: config.rs  lib.rs  loss.rs  mat.rs  network.rs  utils.rs
SoftComputing/ANN_PSO/tests/: integration.rs
SoftComputing/DPOS/: main.py  pyproject.toml
SoftComputing/DPOS/experiments/: quick_test.py  run_paper_experiment.py
SoftComputing/DPOS/tests/: test_hdpso.py  test_mpso.py
SystemSoftware/absolute_loader/: CMakeLists.txt  README.md
SystemSoftware/absolute_loader/doc/: S11159005-AbsoluteLoader.tex
SystemSoftware/absolute_loader/src/: absolute_loader_config.h  main.c
SystemSoftware/absolute_loader/test_file/: source.mem  source.txt
(+608 files in other folders)
