[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matlabengine==24.2.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.1",
]
