[package]
name = "ann_pso"
version = "0.1.0"
edition = "2021"
description = "Neural Network with PSO optimization for XOR problem"

[dependencies]
rand = "0.8"
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
# MNIST dependencies
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
byteorder = "1.5"

[[bin]]
name = "xor-train-pso"
path = "src/bin/xor/train_pso.rs"

[[bin]]
name = "xor-train-gd"
path = "src/bin/xor/train_gd.rs"

[[bin]]
name = "xor-predict"
path = "src/bin/xor/predict.rs"

[[bin]]
name = "mnist-download"
path = "src/bin/mnist/download.rs"

[[bin]]
name = "mnist-train-pso"
path = "src/bin/mnist/train_pso.rs"

[[bin]]
name = "mnist-train-gd"
path = "src/bin/mnist/train_gd.rs"

[[bin]]
name = "mnist-predict"
path = "src/bin/mnist/predict.rs"

[[bin]]
name = "mnist-plot"
path = "src/bin/mnist/plot.rs"
